feat: add template
Fix Linkedin placeholder value.

--- a/pages/lebenslauf.tex
+++ b/pages/lebenslauf.tex
@@ -16,7 +16,7 @@
 \email{$<$EMAIL$>$}
 \homepage{$<$WEBSEITE$>$}
 \social[github]{$<$GITHUB$>$}
-\social[linkedin]{LINKEDIN}
+\social[linkedin]{$<$LINKEDIN$>$}
 
 \begin{document}
 
