feat: open source section
Add open source section and update compiled doc.

--- a/pages/lebenslauf.tex
+++ b/pages/lebenslauf.tex
@@ -68,6 +68,14 @@
 \cvitem{Testing \& Automatisierung}{Lorem, ipsum, dolor, sit, amet, consectetur, adipiscing}
 \cvitem{Tools \& Sonstiges}{Lorem, ipsum, dolor, sit, amet, consectetur, adipiscing}
 
+\section{Open-Source-Tätigkeit}
+\cventry{\textbf{\textcolor{trustblue}{\href{https://$<$LINK$>$}{$<$LINK$>$}}}}{$<$PROJEKT\_NAME$>$}{$<$ROLE$>$}{VON -- BIS}{}{
+\begin{itemize}
+    \item Lorem ipsum odor amet, consectetuer adipiscing elit.
+    \item Lorem ipsum odor amet, consectetuer adipiscing elit.
+    \item Lorem ipsum odor amet, consectetuer adipiscing elit.
+\end{itemize}}
+
 \section{Projekte}
 \cventry{}{}{$<$PROJEKT\_NAME$>$}{\textbf{\textcolor{trustblue}{\href{}{Zum Projekt}}}}{}{
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus tincidunt lobortis tortor in tempus. Aenean porta scelerisque metus, et consectetur odio laoreet sit amet.
