fix: extra info
Change label of nationality.

--- a/pages/lebenslauf.tex
+++ b/pages/lebenslauf.tex
@@ -10,7 +10,7 @@
 \definecolor{trustblue}{RGB}{0, 102, 204}
 
 \name{}{}
-\extrainfo{Nationalität: $<$NATIONALITÄT$>$}
+\extrainfo{Staatsangehörigkeit: $<$XYZ$>$}
 \address{$<$STRAßE$>$ $<$NR$>$}{$<$PLZ$>$ $<$STADT$>$}
 \phone[mobile]{$<$HANDY\_NR$>$}
 \email{$<$EMAIL$>$}
