feat: cover letter
Add cover letter.

--- a/main.tex
+++ b/main.tex
@@ -7,4 +7,6 @@
 
 \includepdf[pages=-, linktodoc=true]{pages/lebenslauf.pdf}
 
+\includepdf[pages=-, linktodoc=true]{pages/anschreiben.pdf}
+
 \end{document}
