--- a/pages/anschreiben.tex
+++ b/pages/anschreiben.tex
@@ -1,5 +1,7 @@
 \documentclass[11pt,a4paper]{article}
 \usepackage[left=2.5cm, right=2.5cm, top=2.5cm, bottom=2.5cm]{geometry}
+\usepackage[T1]{fontenc}
+\usepackage[utf8]{inputenc}
 \usepackage{graphicx}
 \usepackage{parskip}
 \usepackage{hyperref}
