--- a/pages/lebenslauf.tex
+++ b/pages/lebenslauf.tex
@@ -1,4 +1,6 @@
 \documentclass[11pt,a4paper,sans]{moderncv}
+\usepackage[T1]{fontenc}
+\usepackage[utf8]{inputenc}
 
 \moderncvstyle{banking}
 \moderncvcolor{blue}
